[package]
name = "lambda-npm-proxy"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "^0.4.1"
reqwest = { version = "^0.11.6", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "^1.0.71"
tokio = { version = "^1.14.0", features = ["full"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"